edu/10/11-networkpolicy-sample3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-myservice
  namespace: web
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: my-service
      podSelector:
        matchLabels:
          app: myservice
